# pydefi-ui

./: .gitignore  README.md  package.json  pyproject.toml
backend/: deps.py  main.py
backend/routers/: factories.py  indexer.py  pools.py  stats.py  swap.py  yields.py
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/factories/: page.tsx
frontend/src/app/indexer/: page.tsx
frontend/src/app/pools/: page.tsx
frontend/src/app/pools/[address]/: page.tsx
frontend/src/app/program-builder/: page.tsx
frontend/src/app/routing-lab/: page.tsx
frontend/src/app/swap/: page.tsx
frontend/src/app/yields/: page.tsx
frontend/src/components/layout/: main-content.tsx  sidebar-context.tsx  sidebar.tsx  topbar-wrapper.tsx  topbar.tsx
frontend/src/components/pools/: price-chart.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  route-tree.tsx
frontend/src/lib/: api.ts  porto-stub.js  types.ts  use-url-state.ts  utils.ts  wagmi.ts
